AWS-VPC/internet_gateway.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.my_vpc.id 

    tags = {
        Name = "My-internet-gateway" 
    }
}
